--- a/pom.xml
+++ b/pom.xml
@@ -247,12 +247,17 @@
 		    <groupId>org.apache.bval</groupId>  
 		    <artifactId>bval-jsr303</artifactId>  
 		    <version>0.5</version>  
-		</dependency>  
+		</dependency>
   </dependencies>
-  
-  
-  
+
   <build>
-    <finalName>tmiao</finalName>
+      <plugins>
+          <plugin>
+              <groupId>org.eclipse.jetty</groupId>
+              <artifactId>jetty-maven-plugin</artifactId>
+              <version>9.3.9.v20160517</version>
+          </plugin>
+      </plugins>
+    <finalName>travelMS</finalName>
   </build>
 </project>
